-JWT added. -Caching added. -Transaction added. -Performance added. -Logging (serilog) added.

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "mstfoztrk@icloud.com",
+    "Issuer": "mstfoztrk@icloud.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
